--- a/AspMvcECommerce2.WebUI/wwwroot/pages/signin.htm
+++ b/AspMvcECommerce2.WebUI/wwwroot/pages/signin.htm
@@ -1,9 +1,9 @@
-﻿<div class="container">Sign In
-    <!--<div class="row">
-        <div class="col s12">
+﻿<div class="container">
+    <div class="row">
+        <div class="col s12 xl6">
             <div class="card grey lighten-2">
                 <div class="card-content">
-                    <span class="card-title">Sign in</span>
+                    <span class="card-title">Sign In</span>
                     <div class="row">
                         <form id="signin-form" class="col s12">
                             <div class="row">
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-    </div>-->
+    </div>
 </div>
 <script>
     app.handler(function () {
@@ -38,32 +38,30 @@
         return function (param) {
 
             //console.log(preloaderHide);
-            $('#signin-form').unbind("click");
+            $('#signin-form').unbind("submit");
             $('#signin-form').submit(function (ev) {
 
                 ev.preventDefault();
                 var formData = $(this).serialize();
                 //console.log(formData);
                 $.ajax({
-                    url: "/api/auth?action=signin"
+                    url: "/api/auth/signin"
                     , data: formData
-                    , type: 'GET'
+                    , type: 'POST'
                 }).done(function (resp) {
 
-                    if (resp.error != "") {
+                    if (resp.error !== undefined && resp.error !== null && resp.error !== "") {
 
                         alert("error: " + resp.error);
                     } else {
 
-                        //alert("Your data is: " + resp.data[0]);
                         $('#signin-form')[0].reset();
-                        onSignIn(resp.data[0]);
-                        window.location = "/#home";
-                        //window.location = "/api/auth?pagename=home&param=no";
+                        onSignIn(resp.data.login);
+                        window.location = "/#!home";
                     }
-                }).fail(function () {
+                }).fail(function (xhr, status, text) {
 
-                    alert("error");
+                    alert("error: " + text);
                 });
             });
             setTimeout(preloaderHide, 500);
