--- a/AspMvcECommerce2.WebUI/wwwroot/pages/admin.htm
+++ b/AspMvcECommerce2.WebUI/wwwroot/pages/admin.htm
@@ -1,37 +1,4 @@
-﻿<!--<div class="container">
-    <div class="row">
-        <div class="col s12">
-            <div class="card grey lighten-2">
-                <div class="card-content">
-                    <span class="card-title">Sign in</span>
-                    <div class="row">
-                        <form class="col s12">
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="login" name="login" type="text" class="validate">
-                                    <label for="login">Login</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="password" name="password" type="text" class="validate">
-                                    <label for="password">Password</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <button class="btn waves-effect waves-light" type="submit" name="action">
-                                    Submit
-                                    <i class="material-icons right">send</i>
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>-->
-<div class="container">
+﻿<div class="container">
     <div class="row">
         <div class="col s12 m4 l4 xl4">
             <div class="card">
@@ -40,8 +7,7 @@
                     <p>Manage the categories</p>
                 </div>
                 <div class="card-action">
-                    <a href="#adminunit:categories">Go</a>
-                    <!--<a href="/api/auth/page?pagename=adminunit&param=categories">Go</a>-->
+                    <a href="#!adminunit:categories">Go</a>
                 </div>
             </div>
         </div>
@@ -52,8 +18,7 @@
                     <p>Manage the articles</p>
                 </div>
                 <div class="card-action">
-                    <a href="#adminunit:articles">Go</a>
-                    <!--<a href="/api/auth/page?pagename=adminunit&param=categories">Go</a>-->
+                    <a href="#!adminunit:articles">Go</a>
                 </div>
             </div>
         </div>
@@ -62,36 +27,8 @@
 <script>
     app.handler(function () {
 
-        //console.log(preloaderHide);
         return function (param) {
-
             
-            /*$('form').submit(function (ev) {
-
-                ev.preventDefault();
-                var formData = $(this).serialize();
-                //console.log(formData);
-                $.ajax({
-                    url: "/api/auth?action=signin"
-                    , data: formData
-                    , type: 'GET'
-                }).done(function (resp) {
-
-                    if (resp.error != "") {
-
-                        alert("error: " + resp.error);
-                    } else {
-
-                        //alert("Your data is: " + resp.data[0]);
-                        $("form")[0].reset();
-                        onSignIn(resp.data[0]);
-                        window.location = "/#home";
-                    }
-                }).fail(function () {
-
-                    alert("error");
-                });
-            });*/
             setTimeout(preloaderHide, 500);
         };
     });
