--- a/AspMvcECommerce2.WebUI/wwwroot/pages/home.htm
+++ b/AspMvcECommerce2.WebUI/wwwroot/pages/home.htm
@@ -223,13 +223,15 @@
                     cache: false
                 }).done(function (resp) {
 
-                    
-                    if (resp != undefined) {
-                        if (resp.error != "") {
-                            if (resp.error != undefined) {
+                    console.log(resp);
+                    if (resp !== undefined) {
+                        if (resp.error !== null) {
+                            if (resp.error !== undefined) {
                                 alert("error: " + resp.error);
                             }
-                        } else {
+                        }
+                        else
+                        {
     
                             var template = Hogan.compile(
                                 '{{#data}}'
@@ -241,6 +243,7 @@
                                 + '{{/data}}'
                             );
                             //Заполняем шаблон данными и помещаем на веб-страницу
+                            console.log(template.render(resp));
                             $('#articles-grid form#categories').html(template.render(resp));
                         }
                     }
