--- a/AspMvcECommerce2.WebUI/wwwroot/pages/adminunit.htm
+++ b/AspMvcECommerce2.WebUI/wwwroot/pages/adminunit.htm
@@ -151,6 +151,7 @@
                                 //alert("error: " + resp.error);
                                 var modalInstance = M.Modal.getInstance($modal);
                                 $modal.find('.modal-content').html(resp.error);
+                                setModalOk();
                                 modalInstance.open();
                             } else {
 
@@ -195,6 +196,7 @@
 
                             var modalInstance = M.Modal.getInstance($modal);
                             $modal.find('.modal-content').html(message);
+                            setModalOk();
                             modalInstance.open();
                         });
                     }
