Выводится сумма покупки по отдельным категориям товаров в корзине

--- a/AspMvcECommerce2.WebUI/wwwroot/pages/home.htm
+++ b/AspMvcECommerce2.WebUI/wwwroot/pages/home.htm
@@ -335,6 +335,7 @@
                                 + '<th>id</th>'
                                 + '<th>name</th>'
                                 + '<th>count</th>'
+                                + '<th>summ</th>'
                                 + '</tr>'
                                 + '</thead>'
                                 + '<tbody>'
@@ -343,6 +344,7 @@
                                 + '<th scope="row">{{ArticleId}}</th>'
                                 + '<td>{{ArticleName}}</td>'
                                 + '<td>{{Count}}</td>'
+                                + '<td>{{Summ}}</td>'
                                 + '<td>'
                                 + '<div class="row">'
                                 + '<a class="col s3 offset-s1 waves-effect waves-light btn negBtn"><i class="material-icons">exposure_neg_1</i></a>'
